--- a/partials/users.tpl.html
+++ b/partials/users.tpl.html
@@ -5,8 +5,8 @@
     <div class="panel-body">
         <div class="filter-container">
             <div class="filter-left">
-                <label for="filter"></label>Filter by :
-                <input type="search" id="filter" ng-model="q.USER_NAME" placeholder="Filter user by name"/>
+                <label for="filter"></label>Filter by Platform :
+                <input type="search" id="filter" ng-model="q.client_type" placeholder="Filter user by platform"/>
             </div>
             <div class="filter-right">
                 <label for="page"></label>Per Page :
@@ -21,24 +21,34 @@
             </div>
         </div>
         <hr/>
-        <p>User online : {{userCount}}</p>
+        <p>Total User online: {{userCount}}</p>
+        <p>Android: {{androidCCU}}</p>
+        <p>IOS: {{iosCCU}}</p>
+        <p>J2ME: {{j2meCCU}}</p>
+        <p>WinPhone: {{winPhoneCCU}}</p>
+        <p>Web: {{webCCU}}</p>
+        <p>Other Platform: {{otherPlatformCCU}}</p>
         <hr/>
-        <table>
+        <table class="table">
             <thead>
             <tr>
-                <th>No.</th>
-                <th>Username</th>
-                <th>Status</th>
-                <th>Time activated</th>
+                <th> No. </th>
+                <th><a href="" ng-click="predicate = 'USER_NAME'; reverse=!reverse"> Username </a></th>
+                <th><a href="" ng-click="predicate = 'client_type'; reverse=!reverse"> Platform </a></th>
+                <th><a href="" ng-click="predicate = 'registeredtime'; reverse=!reverse"> RegisteredTime</a> </th>
+                <th><a href="" ng-click="predicate = 'loginedFrom'; reverse=!reverse"> Time activated</a> </th>
                 <!--<th>Action</th>-->
             </tr>
             </thead>
             <tbody>
-            <tr dir-paginate="user in users | filter:q | itemsPerPage: pageSize track by $index" current-page="currentPage">
-                <td>{{$index+1}}</td>
-                <td>{{user.USER_NAME}}</td>
-                <td>{{user.IS_ONLINE}}</td>
-                <td>{{user.last_login_time | date : "M/d/yy h:mm:s"}}</td>
+            <tr dir-paginate="user in users | filter:q |orderBy:predicate:reverse | itemsPerPage: pageSize track by $index" current-page="currentPage">
+                <td> {{$index+1}}</td>
+                <td> {{user.USER_NAME}}</td>
+                <td> {{user.client_type }}</td>
+                <!--<td> {{user.REGISTERED_DATE | date : "M/d/yy h:mm:s"}}</td>-->
+                <!--<td> {{user.last_login_time | date : "M/d/yy h:mm:s"}}</td>-->
+                <td> {{user.registeredtime}} days ago </td>
+                <td> {{user.loginedFrom}}  minutes before</td>
                 <td>
                     <!--<a class="btn btn-success" href="#/users/{{user.ID}}/send"><i class="glyphicon glyphicon-envelope"></i></a>-->
                 </td>
