create base ctrl and view template

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,9 +1,9 @@
 <div class="row">
-    <div class="col-lg-4">
-        <div ui-view="test"></div>
+    <div class="col-lg-12">
+        <div ui-view="body"></div>
     </div>
 
-    <div class="col-lg-8">
+    <!--<div class="col-lg-8">
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <strong>Main</strong>
@@ -12,5 +12,5 @@
                 <div ui-view="bang"></div>
             </div>
         </div>
-    </div>
+    </div>-->
 </div>
