--- a/partials/statistics/statistics.tpl.html
+++ b/partials/statistics/statistics.tpl.html
@@ -39,19 +39,18 @@
 <div class="col-lg-6">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <strong>User Statistic</strong>
+            <strong>New User Statistic</strong>
         </div>
         <div class="panel-body">
-            <p>In this demo you can see following actions;</p>
             <div class="form-inline">
                 <fieldset class="col-lg-12 col-md-12 scheduler-border">
                     <legend class="scheduler-border">New User</legend>
-                    <form ng-submit="taskFilter()">
+                    <form ng-submit="newUserFilter()">
                         <div class="form-group">
-                            <input class="form-control stat" ng-model="task.from" ng-required="true" type="text" name="Start Time" placeholder="Start Time" />
+                            <input class="form-control stat" ng-model="newUser.from" ng-required="true" type="text" name="Start Time" placeholder="Start Time" />
                         </div>
                         <div class="form-group">
-                            <input class="form-control stat" ng-model="task.to" ng-required="true" type="text" name="End Time" placeholder="End Time" />
+                            <input class="form-control stat" ng-model="newUser.to" ng-required="true" type="text" name="End Time" placeholder="End Time" />
                         </div>
                         <input type="submit" class="btn btn-primary" value="Query" />
                         <div style="clear:both"></div>
@@ -60,7 +59,7 @@
                         <div class="form-group">
                             <input class="form-control " type="text" name="Start Time" placeholder="Number" ng-value="1" ng-model="newUser.amount"/>
                             <strong> : </strong>
-                            <select ng-model="task.type" class="form-control" ng-change="newUserUpdate()" ng-init="newUser.type = 'day'">
+                            <select ng-model="newUser.type" class="form-control" ng-change="newUserUpdate()" ng-init="newUser.type = 'day'">
                                 <option value="day">Days</option>
                                 <option value="week">Weeks</option>
                                 <option value="month">Month</option>
@@ -69,13 +68,13 @@
                         <div style="clear:both"></div>
                     </div>
                     <hr/>
-                    <h1>{{taskCount}}</h1>
+                    <h1>{{newUserCount}}</h1>
                 </fieldset>
             </div>
         </div>
     </div>
 </div>
-<div class="col-lg-12">
+<div class="col-lg-6">
 <div class="panel panel-primary">
     <div class="panel-heading">
         <strong>Game Statistic</strong>
@@ -83,7 +82,7 @@
     <div class="panel-body">
         <div class="form-inline">
             <fieldset class="col-lg-12 col-md-12 scheduler-border">
-                <legend class="scheduler-border">New User</legend>
+                <legend class="scheduler-border">Games Statistics</legend>
                 <form ng-submit="gameFilter()">
                     <div class="form-group">
                         <input class="form-control stat" ng-model="gameData.from" ng-required="true" type="text" name="Start Time" placeholder="Start Time" />
@@ -107,12 +106,75 @@
                     <div style="clear:both"></div>
                 </div>
                 <hr/>
+                <h1>0</h1>
                 <ul id="double" ng-repeat="game in games">
                     <li><strong>{{game.name}} : </strong> {{game.amount}}</li>
                 </ul>
             </fieldset>
+
         </div>
     </div>
 </div>
+</div>
+<div class="col-lg-6">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <strong>Task Statistic</strong>
+        </div>
+        <div class="panel-body">
+            <div class="form-inline">
+                <fieldset class="col-lg-12 col-md-12 scheduler-border">
+                    <legend class="scheduler-border">Task Static</legend>
+
+                    <form ng-submit="taskFilter()">
+                        <div class="form-group">
+                            <input class="form-control stat" ng-model="task.from" ng-required="true" type="text" name="Start Time" placeholder="Start Time" />
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control stat" ng-model="task.to" ng-required="true" type="text" name="End Time" placeholder="End Time" />
+                        </div>
+                        <input type="submit" class="btn btn-primary" value="Query" />
+                        <div style="clear:both"></div>
+                    </form>
+                    <div class="time-filter">
+                        <div class="form-group">
+                            <input class="form-control " type="text" name="Start Time" placeholder="Number" ng-value="1" ng-model="task.amount"/>
+                            <strong> : </strong>
+                            <select ng-model="task.type" class="form-control" ng-change="taskFilter()" ng-init="task.type = 'day'">
+                                <option value="day">Days</option>
+                                <option value="week">Weeks</option>
+                                <option value="month">Month</option>
+                            </select>
+                        </div>
+                        <div style="clear:both"></div>
+                    </div>
+                    <hr/>
+                    <h3>Total tasks completed: {{taskCount}}</h3>
+                    <h3>Task types: {{tasks.length}}</h3>
+                </fieldset>
+            </div>
+            <div class="form-inline">
+                <fieldset class="col-lg-12 col-md-12 scheduler-border">
+                    <legend class="scheduler-border">Task Detail</legend>
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th> No. </th>
+                            <th><a href="" ng-click="predicate = 'name'; reverse=!reverse"> Task Name</a> </th>
+                            <th><a href="" ng-click="predicate = 'amount'; reverse=!reverse"> Count </a> </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr dir-paginate="task in tasks |orderBy:predicate:reverse | itemsPerPage: pageSize track by $index">
+                            <td> {{$index+1}}</td>
+                            <td> {{task.name}}</td>
+                            <td> {{task.amount}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </fieldset>
+            </div>
+        </div>
+    </div>
 </div>
 
