commit PCI views

--- a/partials/pci/detail.tpl.html
+++ b/partials/pci/detail.tpl.html
@@ -1,1 +1,11 @@
-<p>Detail</p>
+<div class="data">
+    <p><strong>Name :</strong> {{event.name}}</p><br/>
+    <p><strong>Description :</strong> {{event.description}}</p><br/>
+    <p><strong>Icon image :</strong> {{event.description}}</p><br/>
+    <p><strong>Coins :</strong> {{event.coins}}</p><br/>
+    <p><strong>Platform : </strong> {{event.platform}}</p><br/>
+    <p><strong>Start Date :</strong> {{event.sDate}}</p>
+    <p><strong>End Date :</strong> {{event.eDate}}</p>
+    <hr/>
+    <a ui-sref="home.pci">Back to PCI Page</a>
+</div>
